--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,11 @@ section p {
   padding: 10px;
   text-align: justify;
 }
+.banner-top {
+  top: 0;
+  width: 100%;
+  margin: 0 0 0 50px;
+  padding: 0;
+  height: 250px;
+  overflow: hidden;
+}
