--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,8 @@ body {
   font-family: "Jura", sans-serif;
   background: radial-gradient(
     circle at 52.1% -29.6%,
-    #611480 0%,
-    rgb(51, 0, 131) 100.2%
+    #21489f 0%,
+    rgb(76, 25, 158) 100.2%
   );
 }
 
@@ -28,6 +28,31 @@ h2 {
   font-stretch: extra-expanded;
   margin-bottom: 50px;
 }
+
+h3 {
+  font-size: 32px;
+  font-weight: 900;
+  padding: 15px;
+  flex-grow: 0;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 20px;
+  width: 85%;
+}
+.intro-title,
+.profiles-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.divider {
+  flex-grow: 1;
+  height: 1px;
+  background-color: #9f9f9f;
+}
+
 section p {
   margin: 0 70px;
   padding: 10px;
@@ -35,9 +60,10 @@ section p {
 }
 .banner-top {
   top: 0;
-  width: 100%;
-  margin: 0 0 0 50px;
+  left: 0;
+  margin: 0;
   padding: 0;
-  height: 250px;
   overflow: hidden;
+  height: 250px;
+  width: 100%;
 }
