--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,13 @@
 body {
   color: rgb(14, 1, 24);
+  cursor: url(../img/cursor.svg), help;
   font-family: "Gothic A1", sans-serif;
   font-family: "Poppins", sans-serif;
   background: rgb(255, 255, 255);
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 1) 84%,
-    rgba(161, 111, 236, 1) 110%
+    rgb(115, 28, 153) 110%
   );
 }
 
@@ -46,6 +47,11 @@ h3 {
   padding: 15px;
   flex-grow: 0;
 }
+footer {
+  color: white;
+  font-size: 14px;
+  text-align: center;
+}
 
 .banner-top {
   background-image: url(../img/bts_banner_2.jpg);
@@ -84,5 +90,6 @@ h3 {
 .photo-v,
 .photo-jk {
   border-radius: 20%;
-  max-width: 95px;
+  max-width: 115px;
+  box-shadow: 0px 2px 5px rgba(115, 28, 153 1);
 }
