--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,18 @@ h3 {
   padding: 15px;
   flex-grow: 0;
 }
+
+ul {
+  font-size: 13px;
+  list-style-type: none;
+  margin-top: 30px;
+  border: solid 1px rgba(115, 28, 153);
+  border-radius: 5px;
+  overflow-x: visible;
+  padding: 4px;
+  font-weight: 600;
+}
+
 footer {
   color: white;
   font-size: 14px;
@@ -91,5 +103,5 @@ footer {
 .photo-jk {
   border-radius: 20%;
   max-width: 115px;
-  box-shadow: 0px 2px 5px rgba(115, 28, 153 1);
+  box-shadow: 0px 2px 5px rgba(115, 28, 153, 1);
 }
