--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   color: rgb(14, 1, 24);
-  cursor: url(../img/cursor.svg), help;
+  cursor: url(../img/cursor.svg), pointer;
   font-family: "Gothic A1", sans-serif;
   font-family: "Poppins", sans-serif;
   background: rgb(255, 255, 255);
@@ -49,14 +49,19 @@ h3 {
 }
 
 ul {
-  font-size: 13px;
+  background-color: #fff;
+  width: 155px;
+  height: 228px;
+  font-size: 11px;
+  font-weight: 500;
   list-style-type: none;
+  text-align: center;
   margin-top: 30px;
+  padding: 12px;
   border: solid 1px rgba(115, 28, 153);
-  border-radius: 5px;
+  border-radius: 20%;
   overflow-x: visible;
-  padding: 4px;
-  font-weight: 600;
+  display: none;
 }
 
 footer {
@@ -83,7 +88,9 @@ footer {
   width: 85%;
 }
 .intro-title,
-.profiles-title {
+.profiles-title,
+.voting-bias,
+.connect-with-bts {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -103,5 +110,24 @@ footer {
 .photo-jk {
   border-radius: 20%;
   max-width: 115px;
-  box-shadow: 0px 2px 5px rgba(115, 28, 153, 1);
+}
+
+.photo-rm:hover,
+.photo-jin:hover,
+.photo-suga:hover,
+.photo-hobi:hover,
+.photo-jimin:hover,
+.photo-v:hover,
+.photo-jk:hover {
+  box-shadow: 2px 2px 7px rgba(115, 28, 153, 1);
+}
+
+.photo-rm:hover + .profile-rm,
+.photo-jin:hover + .profile-jin,
+.photo-suga:hover + .profile-suga,
+.photo-hobi:hover + .profile-hobi,
+.photo-jimin:hover + .profile-jimin,
+.photo-v:hover + .profile-v,
+.photo-jk:hover + .profile-jk {
+  display: block;
 }
