--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,10 @@ h3 {
   padding: 15px;
   flex-grow: 0;
 }
+h4 {
+  font-size: 22px;
+  font-weight: 900;
+}
 
 footer {
   color: white;
@@ -80,6 +84,10 @@ footer {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.intro-cards {
+  margin: 15px;
 }
 
 .connect-with-bts {
