Creating intro cards, changing some shadow properties

--- a/src/styles.css
+++ b/src/styles.css
@@ -90,6 +90,18 @@ footer {
   margin: 15px;
 }
 
+.card {
+  border: solid 0.5px rgba(115, 28, 153);
+  border-radius: 20%;
+  box-shadow: 0px 10px 20px 0px rgba(115, 28, 153, 0.3);
+  transition: all ease 0.5s;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 20px 40px 0px rgba(115, 28, 153, 0.35);
+}
+
 .connect-with-bts {
   margin-bottom: 20px;
 }
@@ -144,6 +156,7 @@ footer {
 
 .connect-icon {
   width: 50px;
+  border-radius: 5px;
 }
 
 .connect-icon:hover {
