--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,7 @@ h4 {
 }
 
 section p,
-blockquote,
-figcaption {
+blockquote {
   font-size: 16px;
   font-weight: 400;
 }
@@ -54,7 +53,7 @@ footer {
 }
 
 .banner-top {
-  background-image: url(../img/bts_banner_2.jpg);
+  background-image: url(../img/bts_banner.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   overflow-y: hidden;
@@ -73,9 +72,9 @@ footer {
 }
 
 .intro-title,
-.profiles-title,
-.voting-bias,
-.connect-with-bts {
+.members-title,
+.voting-title,
+.connect-title {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -97,7 +96,7 @@ footer {
   box-shadow: 0px 20px 40px 0px rgba(115, 28, 153, 0.35);
 }
 
-.connect-with-bts {
+.connect {
   margin-bottom: 20px;
 }
 
