--- a/src/styles.css
+++ b/src/styles.css
@@ -64,12 +64,6 @@ footer {
   box-shadow: inset 0px -38px 30px 22px #fff;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 50px;
-  width: 80%;
-}
-
 .intro-title,
 .members-title,
 .voting-title,
@@ -103,10 +97,12 @@ footer {
 
 .magazine-link {
   color: #0e0118;
+  text-decoration: none;
 }
 
 .magazine-link:hover {
   color: #0e0118;
+  text-decoration: underline;
   text-shadow: 1px 1px rgba(115, 28, 153, 0.3);
 }
 
@@ -136,15 +132,16 @@ footer {
   border: solid 1px rgba(115, 28, 153);
   border-radius: 20%;
   box-shadow: 0px 10px 20px 0px rgba(115, 28, 153, 0.3);
-  transition: all ease 0.5s;
   overflow-x: visible;
+  transition: display 4s 1s;
   display: none;
+  opacity: 0;
 }
 
 .photo:hover + .profile {
   display: block;
+  opacity: 1;
   transform: translateY(-10px);
-  box-shadow: 0px 20px 40px 0px rgba(115, 28, 153, 0.35);
 }
 
 .poll {
@@ -159,9 +156,12 @@ footer {
 .connect-icon {
   width: 50px;
   border-radius: 5px;
+  border: solid 0.5px #d1a6d7;
+  box-shadow: 2px 2px 5px 2px #e2b9e7;
 }
 
 .connect-icon:hover {
-  transform: translateY(-10px);
+  transform: translateY(2px);
+  border: solid 0.5px #d1a6d7;
   box-shadow: 0px 20px 40px 0px rgba(232, 222, 238, 0.938);
 }
