--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,11 @@ footer {
   box-sizing: border-box;
   box-shadow: inset 0px -38px 30px 22px #fff;
 }
+.container {
+  width: 80%;
+  padding: 40px;
+  margin: 0 auto;
+}
 
 .intro-title,
 .members-title,
@@ -163,5 +168,12 @@ footer {
 .connect-icon:hover {
   transform: translateY(2px);
   border: solid 0.5px #d1a6d7;
-  box-shadow: 0px 20px 40px 0px rgba(232, 222, 238, 0.938);
+  box-shadow: 0px 20px 40px 0px rgba(232, 222, 238, 1);
+}
+.hosting-link {
+  color: white;
+}
+
+.hosting-link:hover {
+  color: #0e0118;
 }
