--- a/src/styles.css
+++ b/src/styles.css
@@ -35,12 +35,13 @@ h3 {
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 900;
 }
 
 section p,
-blockquote {
+blockquote,
+figcaption {
   font-size: 14px;
   font-weight: 400;
 }
@@ -55,8 +56,8 @@ footer {
 .banner-top {
   background-image: url(../img/bts_banner.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
-  overflow-y: hidden;
+  background-size: 90%;
+  background-position-x: center;
   height: 400px;
   border: solid 1px white;
   border-radius: 4px;
@@ -64,7 +65,7 @@ footer {
   box-shadow: inset 0px -38px 30px 22px #fff;
 }
 .container {
-  width: 75%;
+  width: 80%;
   padding: 40px;
   margin: 0 auto;
 }
@@ -151,7 +152,7 @@ footer {
 
 .poll {
   margin: 20px auto;
-  width: 80%;
+  width: 70%;
 }
 
 .connect {
